--- a/pom.xml
+++ b/pom.xml
@@ -32,9 +32,10 @@
         <junit.version>4.11</junit.version>
         <mockito.version>1.9.5</mockito.version>
         <guava.version>15.0</guava.version>
-        <commons-lange.version>2.6</commons-lange.version>
+        <commons-lang.version>2.6</commons-lang.version>
+        <commons-io.version>2.4</commons-io.version>
         <servlet-api.version>2.5</servlet-api.version>
-        <commons-httpclient.version>3.1</commons-httpclient.version>
+        <httpclient.version>4.3.1</httpclient.version>
         <log4j.version>1.2.9</log4j.version>
     </properties>
 
@@ -65,7 +66,12 @@
         <dependency>
             <groupId>commons-lang</groupId>
             <artifactId>commons-lang</artifactId>
-            <version>${commons-lange.version}</version>
+            <version>${commons-lang.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>${commons-io.version}</version>
         </dependency>
         <dependency>
             <groupId>javax.servlet</groupId>
@@ -74,9 +80,9 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>commons-httpclient</groupId>
-            <artifactId>commons-httpclient</artifactId>
-            <version>${commons-httpclient.version}</version>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>${httpclient.version}</version>
         </dependency>
         <!--<dependency>-->
             <!--<groupId>log4j</groupId>-->
