replacing "me" example, as "me" is in the word Chrome, and may confuse the user

--- a/demo/src/main/webapp/WEB-INF/web.xml
+++ b/demo/src/main/webapp/WEB-INF/web.xml
@@ -13,7 +13,7 @@
         </init-param>
         <init-param>
             <param-name>crawlerUserAgents</param-name>
-            <param-value>me</param-value>
+            <param-value>YahooSeeker</param-value>
         </init-param>
     </filter>
     <filter-mapping>
