Added slf4j dependency and some trace-level logging for the filter to explain why a request is intercepted or not.

--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
         <commons-io.version>2.4</commons-io.version>
         <servlet-api.version>2.5</servlet-api.version>
         <httpclient.version>4.3.1</httpclient.version>
-        <log4j.version>1.2.9</log4j.version>
+        <slf4j.version>1.7.5</slf4j.version>
     </properties>
 
     <dependencies>
@@ -85,11 +85,11 @@
             <artifactId>httpclient</artifactId>
             <version>${httpclient.version}</version>
         </dependency>
-        <!--<dependency>-->
-            <!--<groupId>log4j</groupId>-->
-            <!--<artifactId>log4j</artifactId>-->
-            <!--<version>${log4j.version}</version>-->
-        <!--</dependency>-->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>${slf4j.version}</version>
+        </dependency>
     </dependencies>
 
     <distributionManagement>
