--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -11,7 +11,7 @@
         <dependency>
             <groupId>com.github.greengerong</groupId>
             <artifactId>prerender-java</artifactId>
-            <version>1.6.2-SNAPSHOT</version>
+            <version>1.6.2</version>
         </dependency>
         <dependency>
             <groupId>com.github.greengerong</groupId>
