--- a/demo/src/main/resources/log4j.properties
+++ b/demo/src/main/resources/log4j.properties
@@ -1,5 +1,5 @@
 #log4j.rootLogger=CONSOLE,FILE
-log4j.rootLogger=ALL,CONSOLE,FILE
+log4j.rootLogger=DEBUG,CONSOLE
 log4j.addivity.org.apache=true
 
 
@@ -39,15 +39,6 @@ log4j.appender.ROLLING_FILE.MaxBackupIndex=1
 log4j.appender.ROLLING_FILE.layout=org.apache.log4j.PatternLayout
 log4j.appender.ROLLING_FILE.layout.ConversionPattern=[framework] %d - %c -%-4r [%t] %-5p %c %x - %m%n
 
-#自定义Appender
-log4j.appender.im = net.cybercorlin.util.logger.appender.IMAppender
-log4j.appender.im.host = mail.cybercorlin.net
-log4j.appender.im.username = username
-log4j.appender.im.password = password
-log4j.appender.im.recipient = yyflyons@163.com
-log4j.appender.im.layout=org.apache.log4j.PatternLayout
-log4j.appender.im.layout.ConversionPattern =[framework] %d - %c -%-4r [%t] %-5p %c %x - %m%n
-
 #应用于socket
 log4j.appender.SOCKET=org.apache.log4j.RollingFileAppender
 log4j.appender.SOCKET.RemoteHost=localhost
@@ -64,9 +55,9 @@ log4j.appender.LF5_APPENDER.MaxNumberOfRecords=2000
 log4j.appender.MAIL=org.apache.log4j.net.SMTPAppender
 log4j.appender.MAIL.Threshold=FATAL
 log4j.appender.MAIL.BufferSize=10
-log4j.appender.MAIL.From=yyflyons@163.com
+log4j.appender.MAIL.From=
 log4j.appender.MAIL.SMTPHost=www.wusetu.com
 log4j.appender.MAIL.Subject=Log4J Message
-log4j.appender.MAIL.To=yyflyons@126.com
+log4j.appender.MAIL.To=
 log4j.appender.MAIL.layout=org.apache.log4j.PatternLayout
 log4j.appender.MAIL.layout.ConversionPattern=[framework] %d - %c -%-4r [%t] %-5p %c %x - %m%n
