--- a/pom.xml
+++ b/pom.xml
@@ -114,8 +114,13 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.7</version>
+                <version>2.8.1</version>
                 <configuration>
+                    <links>
+                        <link>http://docs.oracel.com/javase/6/docs/api/</link>
+                        <link>http://docs.oracel.com/javaee/6/api/</link>
+                    </links>
+                    <javadocExecutable>${java.home}/../bin/javadoc</javadocExecutable>
                 </configuration>
                 <executions>
                     <execution>
