--- a/pom.xml
+++ b/pom.xml
@@ -79,7 +79,7 @@
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
             <version>${guava.version}</version>
-            <classifier>cdi1.0</classifier>
+<!--            <classifier>cdi1.0</classifier>-->
         </dependency>
         <dependency>
             <groupId>junit</groupId>
